--- a/raiden/webapp/index.html
+++ b/raiden/webapp/index.html
@@ -11,14 +11,13 @@
   <!-- Stylesheets-->
   <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.13/css/jquery.dataTables.css">
   <link rel="stylesheet" type="text/css" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
-
+  <link rel="stylesheet" type="text/css" href="/css/timeline.css">
   <!-- Scripts-->
   <script type="text/javascript" charset="utf8" src="/node_modules/jquery/dist/jquery.min.js"></script>
   <script type="text/javascript" charset="utf8" src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
   <script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.13/js/jquery.dataTables.js"></script>
   <script type="text/javascript" charset="utf8"       src="//cdn.datatables.net/buttons/1.2.4/js/dataTables.buttons.min.js"></script>
   <script type="text/javascript" charset="utf8"       src="//cdn.datatables.net/select/1.2.1/js/dataTables.select.min.js"></script>
-  <!-- <script type="text/javascript" charset="utf8" src="/scripts/editor.min.js"></script>-->
   <script type="text/javascript" charset="utf8" src="/scripts/channeltable.js"></script>
 
   <style>
@@ -28,6 +27,8 @@
     #section1 {padding-top:50px;height:500px; }
     #section2 {padding-top:50px;height:500px; }
     #open_channel_form{padding-top: 50px;}
+    .sidebar-nav-fixed { padding-top:60px; width:25%;}
+
     </style>
 </head>
 
@@ -56,79 +57,95 @@
   </div>
 </nav>
 
+<div class="container">
+  <div class="row">
+    <div class="col-md-9">
+      <div id="section1" class="container-fluid">
 
-<div id="section1" class="container-fluid">
-  <div class="container">
-    <h2>Channels</h2>
-    <p>Shows the Raiden channels that user has with other users </p>
-    <table class="table table-bordered" id="channels">
-      <thead>
-        <tr>
-          <th>Partner Address</th>
-          <th>Asset Address</th>
-          <th>Deposit</th>
-          <th>Status</th>
-        </tr>
-      </thead>
-      <tfoot>
-        <tr>
-          <th>Partner Address</th>
-          <th>Asset Address</th>
-          <th>Deposit</th>
-          <th>Status</th>
-        </tr>
-      </tfoot>
-    </table>
-  </div>
-</div>
+          <h2>Channels</h2>
+          <p>Shows the Raiden channels that user has with other users </p>
+          <table class="table table-bordered" id="channels">
+            <thead>
+              <tr>
+                <th>Partner Address</th>
+                <th>Asset Address</th>
+                <th>Deposit</th>
+                <th>Status</th>
+              </tr>
+            </thead>
+            <tfoot>
+              <tr>
+                <th>Partner Address</th>
+                <th>Asset Address</th>
+                <th>Deposit</th>
+                <th>Status</th>
+              </tr>
+            </tfoot>
+          </table>
+
+      </div>
 
 
-<div id="section2" class="container-fluid">
-  <h1>Advanced mode</h1>
-  <ul class="nav nav-tabs">
-    <li role="presentation" class="active"><a href="#open_channel_form">Open Channel</a></li>
-    <li role="presentation"><a href="#deposit_amount_form">Deposit Amount</a></li>
-    <li role="presentation"><a href="#">Transfer</a></li>
-    <li role="presentation"><a href="#">Close</a></li>
-    <li role="presentation"><a href="#">Settle</a></li>
-  </ul>
+      <div id="section2" class="container-fluid">
+        <h1>Advanced mode</h1>
+        <ul class="nav nav-tabs">
+          <li role="presentation" class="active"><a href="#open_channel_form">Open Channel</a></li>
+          <li role="presentation"><a href="#deposit_amount_form">Deposit Amount</a></li>
+          <li role="presentation"><a href="#">Transfer</a></li>
+          <li role="presentation"><a href="#">Close</a></li>
+          <li role="presentation"><a href="#">Settle</a></li>
+        </ul>
 
-    <div class="container-fluid">
-      <form class="form-horizontal" id="open_channel_form">
-        <div class="form-group">
-          <label class="control-label col-sm-2" for="partner_address">Partner Address</label>
-          <div class="col-sm-3">
-            <input type="text" class="form-control" id="partner_address">
+          <div class="container-fluid">
+            <form class="form-horizontal" id="open_channel_form">
+              <div class="form-group">
+                <label class="control-label col-sm-2" for="partner_address">Partner Address</label>
+                <div class="col-sm-3">
+                  <input type="text" class="form-control" id="partner_address">
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="control-label col-sm-2" for="asset_address">Asset Address</label>
+                <div class="col-sm-3">
+                  <select class="form-control" id="asset_address"></select>
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="control-label col-sm-2" for="settle_timeout">Settle Timeout</label>
+                <div class="col-sm-3">
+                  <input type="text" class="form-control" id="settle_timeout">
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="control-label col-sm-2" for="reveal_timeout">Reveal Timeout</label>
+                <div class="col-sm-3">
+                  <input type="text" class="form-control" id="reveal_timeout">
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-2">
+                  <button type="submit" class="btn btn-default">Submit</button>
+                </div>
+              </div>
+            </form>
           </div>
-        </div>
-        <div class="form-group">
-          <label class="control-label col-sm-2" for="asset_address">Asset Address</label>
-          <div class="col-sm-3">
-            <select class="form-control" id="asset_address"></select>
-          </div>
-        </div>
-        <div class="form-group">
-          <label class="control-label col-sm-2" for="settle_timeout">Settle Timeout</label>
-          <div class="col-sm-3">
-            <input type="text" class="form-control" id="settle_timeout">
-          </div>
-        </div>
-        <div class="form-group">
-          <label class="control-label col-sm-2" for="reveal_timeout">Reveal Timeout</label>
-          <div class="col-sm-3">
-            <input type="text" class="form-control" id="reveal_timeout">
-          </div>
-        </div>
-        <div class="form-group">
-          <div class="col-sm-offset-2 col-sm-2">
-            <button type="submit" class="btn btn-default">Submit</button>
-          </div>
-        </div>
-      </form>
+      </div>
     </div>
 
+    <div class="col-md-3">
+      <div class="sidebar-nav-fixed pull-right affix">
+        <div class="well">
+          <h3> Events </h3>
+          <div class="container-fluid">
+            <ul class="timeline">
+              
+            </ul>
+          </div>
+        </div><!--/.well -->
+      </div>
+    </div>
+  </div>
 </div>
-
 
 </body>
 
