Renaming asset to token
Since we were inconsistent in the use of asset and token we decided to
use `token` consistenly throughout the code base in favor of `asset`.

--- a/raiden/ui/static/index.html
+++ b/raiden/ui/static/index.html
@@ -29,7 +29,7 @@
         <thead>
           <tr>
             <th width="20">#</th>
-            <th width="300">Asset address</th>
+            <th width="300">Token address</th>
             <th width="300">Receiver</th>
             <th width="50" style="text-align:right">Amount</th>
             <th width="10">Status</th>
@@ -51,8 +51,8 @@
       </button>
       <div class="row">
         <div class="large-12 columns">
-            <label>Asset address:
-              <select id="transfer_pubAsset">
+            <label>Token address:
+              <select id="transfer_pubToken">
               </select>
             </label>
         </div>
