--- a/raiden/ui/web/src/index.html
+++ b/raiden/ui/web/src/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Raidenwebui</title>
+  <title>Raiden WebUI</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/png" href="assets/favicon.png">
 </head>
 
 <body>
