Update packages and sync configs to current angular-cli project

--- a/raiden/ui/web/src/index.html
+++ b/raiden/ui/web/src/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
-<html>
-
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <title>Raiden WebUI</title>
@@ -9,9 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="assets/favicon.png">
 </head>
-
 <body>
   <app-root>Loading...</app-root>
 </body>
-
 </html>
